# SimpleGameFramework

./: CMakeCache.txt  CMakeLists.txt  CMake_PreCompiled.txt
Game/SGF/: CMakeLists.txt  demoWorld.cpp  demoWorld.h  main.cpp  sgfPCH.cpp  sgfPCH.h
Src/: bookmarks_2018_8_2.html  bookmarks_2018_9_21.html
Src/Core/: CMakeLists.txt  sgfArchive.cpp  sgfArchive.h  sgfArray.h  sgfArray.inl  sgfCRC.cpp  sgfCRC.h  sgfColor.cpp  sgfColor.h  sgfCoreHeader.h  sgfCorePCH.cpp  sgfCorePCH.h  sgfCoreType.h  sgfDataReader.h  sgfDataWriter.h  sgfFastList.h  sgfFastList.inl  sgfFileReader.cpp  sgfFileReader.h  sgfFileWriter.cpp  sgfFileWriter.h  sgfHashMap.h  sgfHashMap.inl  sgfHashSet.h  sgfHashSet.inl  sgfLog.cpp  sgfLog.h  sgfMath.cpp  sgfMath.h  sgfMatrix.h  sgfMatrix.inl  sgfQuaternion.h  sgfQuaternion.inl  sgfRefCount.h  sgfRotator.h  sgfRotator.inl  sgfSinTable.cpp  sgfSingleton.h  sgfString.cpp  sgfString.h  (+7 more)
Src/Engine/: CMakeLists.txt  sgfEngineHead.h  sgfEnginePCH.cpp  sgfEnginePCH.h  sgfEnginePrivate.h  sgfSerialization.cpp  sgfSerialization.h
Src/Engine/Application/: sgfApplication.cpp  sgfApplication.h
Src/Engine/Camera/: sgfSceneCamera.cpp  sgfSceneCamera.h
Src/Engine/Game/: sgfGameWorld.cpp  sgfGameWorld.h
Src/Engine/Material/: sgfMaterial.cpp  sgfMaterial.h  sgfMaterialLayer.cpp  sgfMaterialLayer.h  sgfShaderEffect.cpp  sgfShaderEffect.h  sgfShaderPass.cpp  sgfShaderPass.h
Src/Engine/Render/: sgfRenderWindow.cpp  sgfRenderWindow.h
Src/Engine/Render/RHI/: sgfRHIViewport.h
Src/RHIDX11/: CMakeLists.txt
Src/RenderHardwareInterface/: CMakeLists.txt  sgfHardwareResource.cpp  sgfHardwareResource.h  sgfRHIBlendState.h  sgfRHIDepthStencilState.h  sgfRHIDevice.cpp  sgfRHIDevice.h  sgfRHIEffect.h  sgfRHIEnum.cpp  sgfRHIEnum.h  sgfRHIFunc.cpp  sgfRHIFunc.h  sgfRHIHead.h  sgfRHIIndexBuffer.h  sgfRHIPCH.h  sgfRHIPCHDefines.h  sgfRHIPrivate.h  sgfRHIRasterizerState.h  sgfRHIShader.h  sgfRHIShaderConstant.h  sgfRHIShaderTexture.h  sgfRHITexture.h  sgfRHIVertexBuffer.h  sgfRHIVertexInput.cpp  sgfRHIVertexInput.h
Src/RenderHardwareInterface/DX11/: sgfPixelShaderDX11.cpp  sgfPixelShaderDX11.h  sgfRHIBlendStateDX11.cpp  sgfRHIBlendStateDX11.h  sgfRHIDX11Private.h  sgfRHIDepthStencilStateDX11.cpp  sgfRHIDepthStencilStateDX11.h  sgfRHIDeviceDX11.cpp  sgfRHIDeviceDX11.h  sgfRHIEffectDX11.cpp  sgfRHIEffectDX11.h  sgfRHIFuncDX11.cpp  sgfRHIFuncDX11.h  sgfRHIIndexBufferDX11.cpp  sgfRHIIndexBufferDX11.h  sgfRHIRasterizerStateDX11.cpp  sgfRHIRasterizerStateDX11.h  sgfRHIShaderDX11.cpp  sgfRHIShaderDX11.h  sgfRHITextureDX11.cpp  sgfRHITypeMapDX11.cpp  sgfRHITypeMapDX11.h  sgfRHIVertexBufferDX11.cpp  sgfRHIVertexBufferDX11.h  sgfRHIVertexInputDX11.cpp  sgfRHIVertexInputDX11.h  sgfRHIVertexShaderDX11.cpp  sgfRHIVertexShaderDX11.h  sgfShaderConstantBufferDX11.cpp  sgfShaderConstantBufferDX11.h  sgfShaderDX11.cpp  sgfShaderDX11.h  sgfVertexShaderDX11.cpp  sgfVertexShaderDX11.h
Src/Win32/: CMakeLists.txt  sgfWin32App.cpp  sgfWin32App.h  sgfWin32AppHeader.h  sgfWin32AppPCH.cpp  sgfWin32AppPCH.h  sgfWin32AppType.h  sgfWin32RenderWindow.cpp  sgfWin32RenderWindow.h
