cmake_minimum_required (VERSION 2.6)
project(SimpleGameFramework) 
SET(COMMON_INCLUDE_DIR ./;)

if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )

	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Bin64)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Lib64)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Lib64)

else( CMAKE_SIZEOF_VOID_P EQUAL 8 )

	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Bin)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Lib)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Lib)

endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )

INCLUDE(CMakeMacro.txt)
INCLUDE(CMake_PreCompiled.txt)
ADD_SUBDIRECTORY(Src/Core)
ADD_SUBDIRECTORY(Src/Engine)
ADD_SUBDIRECTORY(Game/SGF)
ADD_SUBDIRECTORY(Src/Win32)