cmake_minimum_required (VERSION 2.6)
project(SimpleGameFramework) 
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET(COMMON_INCLUDE_DIR ./;)

if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )

	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

else( CMAKE_SIZEOF_VOID_P EQUAL 8 )

	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

endif( CMAKE_SIZEOF_VOID_P EQUAL 8 )

SET(DX_INCLUDE_DIR "C:/Program Files (x86)/Windows Kits/8.1/Include/um")
SET(DX_LINK_DIR "C:/Program Files (x86)/Windows Kits/8.1/Lib/winv6.3/um/x86")
INCLUDE(CMakeMacro.txt)
INCLUDE(CMake_PreCompiled.txt)

ADD_SUBDIRECTORY(Src/Core)
ADD_SUBDIRECTORY(Src/RenderHardwareInterface)
ADD_SUBDIRECTORY(Src/Engine)
ADD_SUBDIRECTORY(Src/Win32)

ADD_SUBDIRECTORY(Game/SGF)