AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

LINK_DIRECTORIES(
${DX_LINK_DIR};
)
ADD_EXE( SGF "${INC}" "${SRC}" )
ADD_PRECOMPILED_HEADER(SGF "sgfPCH.h" "./sgfPCH.cpp" SRC)

SET_PROPERTY(TARGET SGF PROPERTY FOLDER "Game")

ADD_DEPENDENCIES( SGF Win32App )
TARGET_LINK_LIBRARIES( SGF Win32App )
TARGET_LINK_LIBRARIES( SGF d3dx11.lib )