AUX_SOURCE_DIRECTORY(. SRC )
AUX_SOURCE_DIRECTORY(./Application SRC )
AUX_SOURCE_DIRECTORY(./Render SRC )
AUX_SOURCE_DIRECTORY(./Material SRC )
AUX_SOURCE_DIRECTORY(./Game SRC )
AUX_SOURCE_DIRECTORY(./Camera SRC )

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
./;
)
ADD_STATIC( Engine "${INC}" "${SRC}" )
ADD_PRECOMPILED_HEADER(Engine "sgfEnginePCH.h" "./sgfEnginePCH.cpp" SRC)
ADD_DEPENDENCIES( Engine Core )
TARGET_LINK_LIBRARIES( Engine Core )
ADD_DEPENDENCIES( Engine RenderHardwareInterface )
TARGET_LINK_LIBRARIES( Engine RenderHardwareInterface )