AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
./;
${DX_INCLUDE_DIR};
)

ADD_STATIC( RHIDX11 "${INC}" "${SRC}" )
ADD_PRECOMPILED_HEADER(RHIDX11 "sgfRHIDX11PCH.h" "./sgfRHIDX11PCH.cpp" SRC)
ADD_DEPENDENCIES( RHIDX11 RenderHardwareInterface )
TARGET_LINK_LIBRARIES( RHIDX11 RenderHardwareInterface )