AUX_SOURCE_DIRECTORY(. SRC)
AUX_SOURCE_DIRECTORY(./DX11 SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
./;
)

ADD_STATIC( RenderHardwareInterface "${INC}" "${SRC}" )
ADD_PRECOMPILED_HEADER(RenderHardwareInterface "sgfRHIPCH.h" "./sgfRHIPCH.cpp" SRC)
ADD_DEPENDENCIES( RenderHardwareInterface Core )
TARGET_LINK_LIBRARIES( RenderHardwareInterface Core )