AUX_SOURCE_DIRECTORY(. SRC)

FILE(GLOB_RECURSE INC "*.h")
FILE(GLOB_RECURSE INC_TEMP "*.inl")
LIST(APPEND INC ${INC_TEMP})

INCLUDE_DIRECTORIES(
../Engine;
${DX_INCLUDE_DIR};
)

ADD_STATIC( Win32App "${INC}" "${SRC}")
ADD_PRECOMPILED_HEADER( Win32App "sgfWin32AppPCH.h" "./sgfWin32AppPCH.cpp" SRC)

ADD_DEPENDENCIES( Win32App Engine )
TARGET_LINK_LIBRARIES( Win32App Engine )